--- a/app/src/main/res/navigation/mobile_navigation.xml
+++ b/app/src/main/res/navigation/mobile_navigation.xml
@@ -22,4 +22,10 @@
         android:name="com.example.proyecto.ui.slideshow.SlideshowFragment"
         android:label="@string/menu_slideshow"
         tools:layout="@layout/fragment_slideshow" />
+    <activity
+        android:id="@+id/nav_ajustes"
+        android:name="com.example.proyecto.ajustes"
+        android:label="@string/action_settings"
+        app:action="@string/action_settings"
+        tools:layout="@layout/activity_ajustes" />
 </navigation>
